doksi header leírás javítva.

--- a/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <h2>How to authenticate: </h2>
 <p>
-    Each call has to have our custom header with the personal apikey: X-AUTH-HEXAA: &lt;Your API key here&gt; <br/>
+    Each call has to have our custom header with the personal apikey: X-HEXAA-AUTH: &lt;Your API key here&gt; <br/>
     The API key should be obtained through SAML query.
 </p>
 
