--- a/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+<div style="margin-left: 1em;">
 <h2>How to authenticate: </h2>
 <p>
     Each call has to have our custom header with the personal apikey: X-HEXAA-AUTH: &lt;Your API key here&gt; <br/>
-    The API key should be obtained through SAML query.
+    The API key should be obtained through SAML query.<br>
+    Get your personal API key <a href="{{ path('hexaa_storage_default_devgettoken') }}">here</a> (for development purposes only!)
 </p>
 
+</div>
