devgettoken token_expire idő helyesen jelenik meg

--- a/src/Hexaa/StorageBundle/Resources/views/Default/devgettoken.html.twig
+++ b/src/Hexaa/StorageBundle/Resources/views/Default/devgettoken.html.twig
@@ -6,6 +6,6 @@
 Üdv, {{ p.fedid }}!<br>
 A tokened:<br>
 {{p.token}}<br>
-Érvényes: {{p.tokenexpire|date('Y-m-d H:m:s')}}
+Érvényes: {{p.tokenexpire|date('Y. m. d. H:i')}}-ig.
 </body>
 </html>
