SAML azonosítás kivéve

--- a/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
@@ -2,8 +2,8 @@
 <h2>How to authenticate: </h2>
 <p>
     Each call has to have our custom header with the personal apikey: X-HEXAA-AUTH: &lt;Your API key here&gt; <br/>
-    The API key should be obtained through SAML query.<br>
-    Get your personal API key <a href="{{ path('hexaa_storage_default_devgettoken') }}">here</a> (for development purposes only!)
+    The API key should be obtained through the POST /api/tokens call.<br>
+   
 </p>
 
 </div>
