--- a/src/Hexaa/StorageBundle/Resources/views/Default/Invite.html.twig
+++ b/src/Hexaa/StorageBundle/Resources/views/Default/Invite.html.twig
@@ -7,10 +7,10 @@ virtual organization or a service in our HEXAA software.
 {{ message }}
 
 To accept this invitation please visit the following link:
-{{ accept_link }}
+{{ url }}?token={{ token }}&action=accept&mail={{ mail }}
 
 to reject it please visit this link:
-{{ reject_link }}
+{{ url }}?token={{ token }}&action=reject&mail={{ mail }}
 
 Best regards,
 HEXAA
