--- a/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
@@ -2,8 +2,23 @@
 <h2>How to authenticate: </h2>
 <p>
     Each call has to have our custom header with the personal apikey: X-HEXAA-AUTH: &lt;Your API key here&gt; <br/>
-    The API key should be obtained through the POST /api/tokens call.<br>
-   
+    The API key should be obtained through the POST /api/tokens call.
 </p>
-
+<h2>Adding HEXAA admins: </h2>
+<p>
+    To treat a principal as an admin you have to list him/her in /path/to/hexaa/app/config/hexaa_admins.yml<br />
+    An example file is provided with the HEXAA installation: /path/to/hexaa/app/config/hexaa_admins_dist.yml <br />
+    It is recommended to clear the cache after modifying the config. To do this run<br /><br />
+    php app/console cache:clear --env=prod<br /><br />
+    in the HEXAA install directory.
+</p>
+<h2 name="entityids" id="entityids">About EntityIDs: </h2>
+<p>
+    Adding an EntityID to HEXAA should happen when registering the SPs metadata.<br/>
+    To add an EntityID you have to list it in the file: /path/to/hexaa/app/config/hexaa_entityids.yml<br />
+    An example file is provided with the HEXAA installation: /path/to/hexaa/app/config/hexaa_entityids_dist.yml<br />
+    It is recommended to clear the cache after modifying the config. To do this run<br /><br />
+    php app/console cache:clear --env=prod<br /><br />
+    in the HEXAA install directory.
+</p>
 </div>
