--- a/src/Hexaa/StorageBundle/Resources/views/Default/index.html.twig
+++ b/src/Hexaa/StorageBundle/Resources/views/Default/index.html.twig
@@ -1,2 +1,3 @@
-Hello!<br>
+Welcome to HEXAA!<br>
+<a href="{{ ui_url }}">HEXAA Web interface</a>
 <a href="{{ path('nelmio_api_doc_index') }}">REST API documentation</a>
