--- a/src/Hexaa/ApiBundle/Resources/views/Default/Invite.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/Invite.html.twig
@@ -1,38 +1,42 @@
-Dear Sir/Madam,
+<html>
+    <body>
+        Dear Sir/Madam,
 
-this is an invitation, sent by {{ inviter.displayName }}&lt;{{ inviter.fedid }}&gt;, asking you to join a 
-{% if service %} service {% else %} virtual organization {% endif %} in our HEXAA software.
+        this is an invitation, sent by {{ inviter.displayName }}&lt;{{ inviter.fedid }}&gt;, asking you to join a 
+        {% if service %} service {% else %} virtual organization {% endif %} in our HEXAA software.
 
-Details: <br>
-{% if service %} 
-Service<br>
-name: {{ service.name }}<br>
-description: {{ service.description }}<br>
-You will be a manager of this service.<br>
+        Details: <br>
+        {% if service %} 
+            Service<br>
+            name: {{ service.name }}<br>
+            description: {{ service.description }}<br>
+            You will be a manager of this service.<br>
 
-{% else %}
-Virtual organization 
-name: {{ organization.name }}<br>
-description: {{ organization.description }}<br>
-{% if asManager %}
-You will be a manager of this organization.<br>
-{% else %}
-You will be a member of this organization.<br>
-{% endif %}
-{% if role %}
-You have been invited to join the Role {{ role.name }}.
-{% endif %}
+        {% else %}
+            Virtual organization <br>
+            name: {{ organization.name }}<br>
+            description: {{ organization.description }}<br>
+            {% if asManager %}
+                You will be a manager of this organization.<br>
+            {% else %}
+                You will be a member of this organization.<br>
+            {% endif %}
+            {% if role %}
+                You have been invited to join the Role {{ role.name }}.
+            {% endif %}
 
-{% endif %}
+        {% endif %}
 
-{{ inviter.fedid }}'s personal message:
-{{ message }}
+        {{ inviter.fedid }}'s personal message:
+        {{ message }}
 
-To accept this invitation please visit the following link:
-{{ url }}?token={{ token }}&action=accept&mail={{ mail }}
+        To accept this invitation please visit the following link:
+        {{ url }}?token={{ token }}&action=accept&mail={{ mail }}
 
-to reject it please visit this link:
-{{ url }}?token={{ token }}&action=reject&mail={{ mail }}
+        to reject it please visit this link:
+        {{ url }}?token={{ token }}&action=reject&mail={{ mail }}
 
-Best regards,
-HEXAA
+        Best regards,
+        HEXAA
+    </body>
+</html>
