--- a/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
@@ -21,4 +21,16 @@
     php app/console cache:clear --env=prod<br /><br />
     in the HEXAA install directory.
 </p>
+<h2>Note about tags</h2>
+<p>
+    Tags (e.g. admins) show the lowest security role requirement required for the call.<br>
+    This means a call tagged "service manager" can be called by admins and service managers.<br>
+    Available security roles:
+<ul>
+    <li>admin</li>
+    <li>(service|organization) manager</li>
+    <li>organization member</li>
+</ul>
+    Those calls without these tags can be called by anyone.
+</p>
 </div>
