--- a/src/Hexaa/ApiBundle/Resources/views/Default/ServiceNotify.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/ServiceNotify.html.twig
@@ -23,7 +23,7 @@
 
     <p>
         {% trans %}Please verify that the service is entitled to use the entity ID above by visiting this link{% endtrans %}:<br>
-        <a href="{{ url }}?token={{ token }}">{{ url }}?token={{ token }}</a><br><br>
+        <a href="{{ url }}?token={{ s.enableToken }}">{{ url }}?token={{ s.enableToken }}</a><br><br>
 
         {% trans %}If you do not wish to grant permission, you may ignore this e-mail{% endtrans %}.<br>
     </p>
