add close window link

--- a/src/Hexaa/StorageBundle/Resources/views/Default/enableService.html.twig
+++ b/src/Hexaa/StorageBundle/Resources/views/Default/enableService.html.twig
@@ -8,5 +8,8 @@
         {% endtrans %}:<br><br>
         {{ service.description }}<br>
     </p>
+    <hr>
+    <p>Thank you!<br>
+       You may now <a href="javascript:window.close">close this page</a>.</p>
 </body>
 </html>
