--- a/src/Hexaa/StorageBundle/Resources/views/Default/enableService.html.twig
+++ b/src/Hexaa/StorageBundle/Resources/views/Default/enableService.html.twig
@@ -10,6 +10,6 @@
     </p>
     <hr>
     <p>Thank you!<br>
-       You may now <a href="javascript:window.close">close this page</a>.</p>
+       You may now <a href="javascript:window.close()">close this page</a>.</p>
 </body>
 </html>
