Admin mode docs

--- a/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
@@ -12,6 +12,10 @@
         php app/console cache:clear --env=prod<br /><br />
         in the HEXAA install directory.
     </p>
+    <h2 id="act_as_admin">Calling as a HEXAA admin: </h2>
+    <p>
+        To act as a HEXAA admin you have to specify admin=true GET parameters to calls, otherwise you will not be authenticated as an admin.
+    </p>
     <h2 id="entityids">About EntityIDs: </h2>
     <p>
         Adding an EntityID to HEXAA should happen when registering the SPs metadata.<br/>
