--- a/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
@@ -16,6 +16,20 @@
     <p>
         To act as a HEXAA admin you have to specify admin=true GET parameters to calls, otherwise you will not be authenticated as an admin.
     </p>
+    <h2 id="verbosity">Verbosity</h2>
+    <p>
+        All calls accept a 'verbose' GET parameter. Some calls don't make use of it (can't change verbosity of an empty request),
+        but can handle it all the same for the sake of compatibility.
+        There are 3 possible values:
+    </p>
+    <dl>
+        <dt><strong>minimal:</strong></dt>
+        <dd>serializes only minimal information (e.g. name and id)</dd>
+        <dt><strong>normal:</strong></dt>
+        <dd>returns all attributes + the ids of any child collection or entity</dd>
+        <dt><strong>expanded:</strong></dt>
+        <dd>returns all attributes and child collections or entities</dd>
+    </dl>
     <h2 id="entityids">About EntityIDs: </h2>
     <p>
         Adding an EntityID to HEXAA should happen when registering the SPs metadata.<br/>
