--- a/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
@@ -51,4 +51,9 @@
         <li style="margin: 0.25em;"><span style="background-color:#4180B4; color: #ffffff;">(service|organization) manager</span></li>
         <li style="margin: 0.25em;"><span style="background-color:#5BA578; color: #ffffff;">organization member</span></li>
     </ul>
+    <h2>Note about server-side pagination</h2>
+    <p>
+        Those calls with 'limit' and 'offset' GET parameters always return a JSON object with "item_number"
+        with the number of total items and an array "items" with the items determined by offset and limit.
+    </p>
 </div>
