fix incomprehensible text in docs

--- a/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
@@ -54,6 +54,6 @@
     <h2>Note about server-side pagination</h2>
     <p>
         Those calls with 'limit' and 'offset' GET parameters always return a JSON object with "item_number"
-        with the number of total items and an array "items" with the items determined by offset and limit.
+        containing the number of total items and an "items" array with the items determined by offset and limit.
     </p>
 </div>
