Fix UI URL var in service claim mail template.

--- a/src/Hexaa/ApiBundle/Resources/views/Default/ServiceNotify.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/ServiceNotify.html.twig
@@ -116,7 +116,7 @@
 
     <div class="end">
         <a href="http://hexaa.eu" class="link">hexaa.eu</a>  •
-        <a href="{{ hexaa_frontend_link }}" class="link">{% trans %}log in{% endtrans %}</a>  •
+        <a href="{{ hexaa_ui_url }}" class="link">{% trans %}log in{% endtrans %}</a>  •
         <a href="#" class="link">{% trans %}terms of use{% endtrans %}</a> <br>
         {% trans %}Made by <span id="blue">SZTAKI  •  Department of Network Security and Internet Technologies</span>{% endtrans %}
     </div>
