--- a/src/Hexaa/ApiBundle/Resources/views/Default/ServiceNotify.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/ServiceNotify.html.twig
@@ -110,7 +110,7 @@
         <p>{% trans %}If you don't know what this is about or do not want to authorize the claim, just ignore this e-mail.{% endtrans %}</p><br />
 
         <div id="button_container">
-            <a href="{{ hexaa_frontend_link }}" class="button">{% trans %}Authorize claim{% endtrans %}</a>
+            <a href="{{ returl }}" class="button">{% trans %}Authorize claim{% endtrans %}</a>
         </div><br>
     </div>
 
