Fix missing slash in org invitation URLs

--- a/src/Hexaa/ApiBundle/Resources/views/Default/Invite.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/Invite.html.twig
@@ -115,7 +115,7 @@
         <p> <span id="blue_bold"> {{ organization.name }} </span> is a Virtual Organization managed in the HEXAA platform. <span id="blue_bold">To accept the invitation click on the button below:</span></p><br>
 
         <div id="button_container">
-            <a href="{{ url }}organization/{{ organization.id }}/resolveInvitationToken/{{ token }}" class="button">ACCEPT</a>
+            <a href="{{ url }}/organization/{{ organization.id }}/resolveInvitationToken/{{ token }}" class="button">ACCEPT</a>
         </div>
 
         <br>
