Docker: update base image to PHP 7.4

--- a/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
+++ b/src/Hexaa/ApiBundle/Resources/views/Default/motd.html.twig
@@ -35,8 +35,10 @@
     <h2 id="entityids">About EntityIDs: </h2>
     <p>
         Adding an EntityID to HEXAA should happen when registering the SPs metadata.<br/>
-        To add an EntityID you have to list it in the file: /path/to/hexaa/app/config/site/hexaa_entityids.yml<br/>
-        An example file is provided with the HEXAA installation: /path/to/hexaa/app/config/site/hexaa_entityids_dist.yml<br/>
+        To add an EntityID you have to list it in the file: <tt>/path/to/hexaa/app/config/site/hexaa_entityids.yml</tt>
+        <br>
+        An example file is provided with the HEXAA installation: <tt>/path/to/hexaa/app/config/site/hexaa_entityids_dist.yml</tt>
+        <br>
         It is recommended to clear the cache after modifying the config. To do this run<br/><br/>
         php app/console cache:clear --env=prod<br/><br/>
         in the HEXAA install directory.
